# UniFileHub

./: .gitignore  CMakeLists.txt  CMakeLists.txt.EhLjuT  CMakeLists.txt.Hjbyvc  CMakeLists.txt.XJbyxQ  CMakeLists.txt.cnSZiQ  CMakeUserPresets.json  README.md  SmartDesk.db  _uic_test_ui_ControlFrame.h  class1.csv  h origin cmake --force  settings.ini  smartdesk_file_association.reg  test.txt  test_reminder.cpp  功能点列表.txt  数据流图文档.txt  软件项目管理功能点列表.txt
ClipBoard/: CMakeLists.txt  CMakeLists.txt.autosave  ClipboardCloudClient.cpp  ClipboardComponentFactory.cpp  ClipboardController.cpp  ClipboardHistoryManager.cpp  ClipboardItem.h  ClipboardItemDelegate.cpp  ClipboardItemFactory.cpp  ClipboardMenuBuilder.cpp  ClipboardMonitor.cpp  ClipboardView.cpp  ClipboardView.h  ClipboardView.ui  FileClipboardItem.cpp  FileClipboardItem.h  FiletypeDetector.cpp  ImageClipboardItem.cpp  ImageClipboardItem.h  ImagePreviewDialog.cpp  TestFile.cpp  TestFile.h  TextClipboard.cpp  TextClipboardItem.h  clipboarditemfactory.cpp  clipboarditemfactory.h  filetypedetector.cpp  filetypedetector.h  imagepreviewdialog.cpp  imagepreviewdialog.h
ClipBoard/ClipboardItem/: CliFile.cpp  CliImage.cpp  CliText.cpp
ClipBoard/include/: ClipboardCloudClient.h  ClipboardComponentFactory.h  ClipboardController.h  ClipboardHistoryManager.h  ClipboardItemDelegate.h  ClipboardItemFactory.h  ClipboardMenuBuilder.h  ClipboardMonitor.h  ClipboardView.h  FiletypeDetector.h  ImagePreviewDialog.h
ClipBoard/ui/: ClipboardView.ui
DisposeAbstract/DisposeCSV/: CMakeLists.txt  ControlWidCSV.cpp  ControlWidCSV.h  ControlWidCSV.ui  TabHandleCSV.cpp  TabHandleCSV.h
DisposeAbstract/DisposeDB/: CMakeLists.txt  ControlWidDB.cpp  ControlWidDB.h  ControlWidDB.ui  TabHandleDB.cpp  TabHandleDB.h
DisposeAbstract/DisposeIMG/: CMakeLists.txt  ControlFrame.cpp  DrawTool.cpp  DrawToolPanel.cpp  PixItem.cpp  TabHandleIMG.cpp  TabHandleIMG.cpp.TFAHyd  TabHandleIMG.h  WaterMark.cpp
DisposeAbstract/DisposePDF/: CMakeLists.txt  ControlWidPDF.cpp  ControlWidPDF.h  ControlWidPDF.ui  TabHandlePDF.cpp  TabHandlePDF.h
DisposeAbstract/DisposePSD/: CMakeLists.txt  ControlWidPSD.cpp  TabHandlePSD.cpp
DisposeAbstract/DisposeTXT/: CMakeLists.txt  ControlWidTXT.cpp  ControlWidTXT.h  ControlWidTXT.ui  LineNumberWidget.cpp  LineNumberWidget.h  PlainTextEdit.cpp  PlainTextEdit.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TabHandleTXT.cpp  TabHandleTXT.h
DisposeAbstract/DisposeVideo/: CMakeLists.txt  ControlWidVideo.cpp  ControlWidVideo.h  ControlWidVideo.ui  TabHandleVideo.cpp  TabHandleVideo.h
DisposeAbstract/DisposeXlsx/: CMakeLists.txt  TabHandleXLSX.cpp  TabHandleXLSX.h
EmailService/: CMakeLists.txt  SendEmail.cpp  SendEmail.h  SendEmail.ui
FileBackup/: CMakeLists.txt  FileBackup.cpp  FileBackupList.cpp  FileBackupView.cpp  FileBackupWid.cpp  FileRestoreWid.cpp
FileBackup/include/: FileBackup.h  FileBackupList.h  FileBackupView.h  FileBackupWid.h  FileRestoreWid.h
FileBackup/ui/: FileBackup.ui  FileBackupList.ui  FileBackupView.ui  FileBackupWid.ui  FileRestoreWid.ui
FileSystem/: CMakeLists.txt  FileSystem.cpp  QBreadcrumbBar.cpp  TagItemDelegate.cpp
FileSystem/include/: FileSystem.h  QBreadcrumbBar.h  TagItemDelegate.h
FileSystem/ui/: FileSystem.ui
ImageDispose/: CMakeLists.txt  ControlFrame.ui
MoreFunction/: CMakeLists.txt  MoreFunction.cpp  MoreFunction.h  MoreFunction.ui
PersonalDrive/: CMakeLists.txt  DriveApiClient.cpp  DriveFile.cpp  DriveFolder.cpp  DriveItem.cpp  DriveManager.cpp  DriveView.cpp  DriveView.h  DriveView.ui  DriveViewDelegate.cpp  HistoryDelegate.cpp  PersonalDriveView.cpp  PersonalDriveView.h  PersonalDriveView.ui  backend_path_api.py  requirements.txt  run.py  测试用例.md
PersonalDrive/include/: DriveApiClient.h  DriveFile.h  DriveFolder.h  DriveItem.h  DriveManager.h  DriveRoles.h  DriveView.h  DriveViewDelegate.h  HistoryDelegate.h
Setting/: CMakeLists.txt  IconManager.cpp  Setting.cpp  SettingManager.cpp  ThemeManager.cpp
Setting/include/: AppHelp.h  IconManager.h  Setting.h  SettingManager.h  ThemeManager.h
Setting/ui/: Setting.ui
TagSchedule/: AddTag.cpp  CMakeLists.txt  ScheduleWid.cpp  TagDetail.cpp  TagList.cpp
TagSchedule/LmsgNotify/: notifywnd.cpp
TagSchedule/include/: AddTag.h  ScheduleWid.h  TagDetail.h  TagList.h
TagSchedule/ui/: AddTag.ui  ScheduleWid.ui  TagDetail.ui  TagList.ui
email/: CMakeLists.txt  sendemail.cpp  sendemail.h  sendemail.ui
filehis/: CMakeLists.txt  DPull.cpp  DPull.h  DPull.ui  WFileHis.cpp  WFileHis.h  WFileHis.ui
filetag/: CMakeLists.txt  DCommit.cpp  DTag.cpp  DTag.h  DTag.ui  ServerManager.cpp  ServerManager.h  TagItemDelegate.cpp  TagItemDelegate.h  WFileTag.cpp  WFileTag.h  WFileTag.ui
filetag/include/: DCommit.h  TagItemDelegate.h  WFileTag.h
filetag/ui/: DCommit.ui  DTag.ui  WFileTag.ui
main/: CMakeLists.txt  ControlWidCSV.cpp  RecentFilesManager.cpp  RecentFilesManager.h  TabAbstract.h  TabFactory.cpp  TabHandleCSV.cpp  TabHandleCSV.h  TabHandleTXT.cpp  TabManager.cpp  WidgetFunctional.cpp  WidgetFunctional.h  WidgetFunctional.ui  finddialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sendemail.cpp  sendemail.h  sendemail.ui
main/include/: ControlWidCSV.h  ControlWidTXT.h  ControlWidget.h  FindDialog.h  (+9 more)
manager/: CMakeLists.txt  DBManagerFac.h  DBMySQL.cpp  DBMySQL.h  DBSQlite.cpp  DBSQlite.h  FileLocationHelper.cpp  ServerManager.cpp  ServerManager.h  dbBackupRecord.cpp  dbClipboard.cpp  dbDriveDownload.cpp  dbDriveUpload.cpp  dbFilepath.cpp  dbManager.cpp  dbOnlineDoc.cpp
onlinedoc/: CMakeLists.txt  DLfromNet.cpp  DLfromNet.h  DownloadView.cpp  EditedLog.cpp  EditedLog.h  SharedView.cpp  WOnlineDoc.cpp  WOnlineDoc.ui  csvLinkServer2.cpp  csvLinkServer2.h  csvLinkServer2.ui
schedule/: CMakeLists.txt  DTag.cpp  FileItemWidget.cpp  FileItemWidget.ui  WSchedule.cpp  WSchedule.h  WSchedule.ui
setting/: AppHelp.cpp  CMakeLists.txt  Setting.cpp  Setting.h  Setting.ui  SettingManager.cpp  SettingManager.h
userinfo/: CMakeLists.txt  DInfo.cpp  DInfo.h  DInfo.ui  DLogin.cpp  DLogin.h  DLogin.ui  FlaskInfo.cpp
(+153 files in other folders)
